After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 694834 - register with the session
register with the session
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-02-28 01:46 UTC by Matthias Clasen
Modified: 2013-02-28 03:25 UTC
See Also:
GNOME target: 3.8
GNOME version: ---



Description Matthias Clasen 2013-02-28 01:46:51 UTC
in classic mode, we're using nautilus as a required session component. If it doesn't register with the session manager, the failwhale comes up after a short while. This would be trivial if NautilusApplication was a GtkApplication.
Comment 1 Cosimo Cecchi 2013-02-28 02:58:28 UTC
Ah, but NautilusApplication *is* a GtkApplication - can I just set register-session to TRUE and GTK+ will take care of the rest?
Comment 2 Cosimo Cecchi 2013-02-28 03:17:57 UTC
I get the following message when setting register-session to TRUE when constructing the GtkApplication.

(nautilus:19472): Gtk-WARNING **: Failed to register client: GDBus.Error:org.gnome.SessionManager.AlreadyRegistered: Unable to register client

No other Nautilus instance is running in the session.
Comment 3 Cosimo Cecchi 2013-02-28 03:25:07 UTC
Nevermind, I didn't have a clean environment and something was overriding DESKTOP_AUTOSTART_ID in my terminal.
I pushed the trivial patch to git master.