application: register with gnome-session

This is needed for classic mode, since we're a required component of
that session.

https://bugzilla.gnome.org/show_bug.cgi?id=694834