src/nautilus-application.c
@@ -1637,5 +1637,6 @@ nautilus_application_new (void)
 			     "application-id", "org.gnome.Nautilus",
 			     "flags", G_APPLICATION_HANDLES_OPEN,
 			     "inactivity-timeout", 12000,
+			     "register-session", TRUE,
 			     NULL);
 }
